--- a/views/config_booking_business.erb
+++ b/views/config_booking_business.erb
@@ -32,7 +32,7 @@
     </div>
     <% end %>
 
-    <div class="row">
+    <!--div class="row">
       <div class="col-sm-12 col-md-10 col-md-offset-1">
         <div class="block ">
           <div class="block-header bg-gray-lighter">
@@ -54,7 +54,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div-->
 
     <div class="row">
       <div class="col-sm-12 col-md-10 col-md-offset-1">
